# search-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.ui  PLAN.md  README.md  architecture_diagram.md  docker-compose.yml  instructions.txt  pyproject.toml
docs/: DEPLOYMENT.md  openapi.json
internet_search_agent/: README.md  agent.py  file_tools.py  graph_builder.py  llm_interface.py  main.py  map_prompt.txt  prompt_template.txt  requirements.txt  search_tool.py
internet_search_agent/prompts/: company_identification_prompt.txt  synthesis_prompt.txt
internet_search_agent/tests/: test_file_tools.py  test_search_tool.py
screenshots_ui/: 1_entry_page.html
streamlit_ui/: streamlit_app.py
sustainability_research_agent/: README.md  __init__.py  agent.py  api_server.py  file_tools.py  graph_builder.py  logging_config.py  main.py  search_tool.py  single_pdf_analyzer.py
sustainability_research_agent/bkp_summary_cache/: ford_summary.txt  general_motors_summary.txt  honda_motor_co._summary.txt  ltd._summary.txt  stellantis_summary.txt  tesla_summary.txt
sustainability_research_agent/prompts/: __init__.py  combine_prompt.txt  company_identification_prompt.txt  map_prompt.txt  prompt_template.txt  synthesis_prompt.txt
sustainability_research_agent/research_agent/: agent.py  database.py  file_tools.py  graph_builder.py  history_tools.py  research_tools.py  search_tool.py
sustainability_research_agent/summary_cache/: honda_summary.txt  hyundai_motor_group_summary.txt  toyota_motor_corporation_summary.txt  toyota_summary.txt  volkswagen_group_summary.txt  volkswagen_summary.txt
sustainability_research_agent/tests/: __init__.py  test_file_tools.py  test_graph_builder.py  test_search_tool.py
